Solved a horizontal scrollbar issue on the homepage, but the styling for all the other pages is now broken.

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100vw;
+    width: 100%;
     font-family: 'Open Sans';
 }
 
