--- a/src/components/footer-style.css
+++ b/src/components/footer-style.css
@@ -4,7 +4,7 @@ footer {
     align-items: center;
     background: #20232a;
     color: #ffffff;
-    width: 100vw;
+    width: 100%;
 }
 
 footer a {
