--- a/src/components/header-style.css
+++ b/src/components/header-style.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     background: #20232a;
-    width: 100vw;
+    width: 100%;
 }
 
 header {
@@ -17,7 +17,7 @@ header {
 @media only screen and (min-width: 600px) {
 
     #header-container {
-        width: 100vw;
+        width: 100%;
     }
 
     header {
